@@ -20,20 +20,19 @@ package org.keycloak.sdjwt;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import org.jboss.logging.Logger;
 import org.keycloak.common.VerificationException;
-import org.keycloak.crypto.AsymmetricSignatureVerifierContext;
-import org.keycloak.crypto.ECDSASignatureVerifierContext;
-import org.keycloak.crypto.KeyType;
-import org.keycloak.crypto.KeyWrapper;
 import org.keycloak.crypto.SignatureVerifierContext;
-import org.keycloak.jose.jwk.JWK;
+import org.keycloak.sdjwt.consumer.PresentationRequirements;
 import org.keycloak.sdjwt.vp.KeyBindingJWT;
 import org.keycloak.sdjwt.vp.KeyBindingJwtVerificationOpts;
-import org.keycloak.util.JWKSUtils;
 
 import java.time.Instant;
+import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -46,6 +45,9 @@ import java.util.stream.Collectors;
  * @author <a href="mailto:Ingrid.Kamga@adorsys.com">Ingrid Kamga</a>
  */
 public class SdJwtVerificationContext {
+
+    private static final Logger logger = Logger.getLogger(SdJwtVerificationContext.class.getName());
+
     private String sdJwtVpString;
 
     private final IssuerSignedJWT issuerSignedJwt;
@@ -75,9 +77,9 @@ public class SdJwtVerificationContext {
     private Map<String, String> computeDigestDisclosureMap(List<String> disclosureStrings) {
         return disclosureStrings.stream()
                 .map(disclosureString -> {
-                    var digest = SdJwtUtils.hashAndBase64EncodeNoPad(
+                    String digest = SdJwtUtils.hashAndBase64EncodeNoPad(
                             disclosureString.getBytes(), issuerSignedJwt.getSdHashAlg());
-                    return Map.entry(digest, disclosureString);
+                    return new AbstractMap.SimpleEntry<>(digest, disclosureString);
                 })
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
@@ -90,26 +92,35 @@ public class SdJwtVerificationContext {
      * - all Disclosures are valid and correspond to a respective digest value in the Issuer-signed JWT
      * (directly in the payload or recursively included in the contents of other Disclosures).
      *
-     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification. A verifier
-     *                                        must be specified for validating the Issuer-signed JWT. The caller
-     *                                        is responsible for establishing trust in that associated public keys
-     *                                        belong to the intended issuer.
+     * @param issuerVerifyingKeys             Verifying keys for validating the Issuer-signed JWT. The caller
+     *                                        is responsible for establishing trust in that the keys belong
+     *                                        to the intended issuer.
+     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification.
+     * @param presentationRequirements        If set, the presentation requirements will be enforced upon fully
+     *                                        disclosing the Issuer-signed JWT during the verification.
      * @throws VerificationException if verification failed
      */
     public void verifyIssuance(
-            IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts
+            List<SignatureVerifierContext> issuerVerifyingKeys,
+            IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts,
+            PresentationRequirements presentationRequirements
     ) throws VerificationException {
         // Validate the Issuer-signed JWT.
-        validateIssuerSignedJwt(issuerSignedJwtVerificationOpts.getVerifier());
+        validateIssuerSignedJwt(issuerVerifyingKeys);
 
         // Validate disclosures.
-        var disclosedPayload = validateDisclosuresDigests();
+        JsonNode disclosedPayload = validateDisclosuresDigests();
 
         // Validate time claims.
         // Issuers will typically include claims controlling the validity of the SD-JWT in plaintext in the
         // SD-JWT payload, but there is no guarantee they would do so. Therefore, Verifiers cannot reliably
         // depend on that and need to operate as though security-critical claims might be selectively disclosable.
         validateIssuerSignedJwtTimeClaims(disclosedPayload, issuerSignedJwtVerificationOpts);
+
+        // Enforce presentation requirements.
+        if (presentationRequirements != null) {
+            presentationRequirements.checkIfSatisfiedBy(disclosedPayload);
+        }
     }
 
     /**
@@ -120,18 +131,22 @@ public class SdJwtVerificationContext {
      * to ensure that if Key Binding is required, the Key Binding JWT is signed by the Holder and valid.
      * </p>
      *
-     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification. A verifier
-     *                                        must be specified for validating the Issuer-signed JWT. The caller
-     *                                        is responsible for establishing trust in that associated public keys
-     *                                        belong to the intended issuer.
+     * @param issuerVerifyingKeys             Verifying keys for validating the Issuer-signed JWT. The caller
+     *                                        is responsible for establishing trust in that the keys belong
+     *                                        to the intended issuer.
+     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification.
      * @param keyBindingJwtVerificationOpts   Options to parameterize the Key Binding JWT verification.
      *                                        Must, among others, specify the Verifier's policy whether
      *                                        to check Key Binding.
+     * @param presentationRequirements        If set, the presentation requirements will be enforced upon fully
+     *                                        disclosing the Issuer-signed JWT during the verification.
      * @throws VerificationException if verification failed
      */
     public void verifyPresentation(
+            List<SignatureVerifierContext> issuerVerifyingKeys,
             IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts,
-            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts
+            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts,
+            PresentationRequirements presentationRequirements
     ) throws VerificationException {
         // If Key Binding is required and a Key Binding JWT is not provided,
         // the Verifier MUST reject the Presentation.
@@ -140,7 +155,7 @@ public class SdJwtVerificationContext {
         }
 
         // Upon receiving a Presentation, in addition to the checks in {@link #verifyIssuance}...
-        verifyIssuance(issuerSignedJwtVerificationOpts);
+        verifyIssuance(issuerVerifyingKeys, issuerSignedJwtVerificationOpts, presentationRequirements);
 
         // Validate Key Binding JWT if required
         if (keyBindingJwtVerificationOpts.isKeyBindingRequired()) {
@@ -156,18 +171,32 @@ public class SdJwtVerificationContext {
      * - the Issuer-signed JWT is valid, i.e., it is signed by the Issuer and the signature is valid
      * </p>
      *
+     * @param verifiers Verifying keys for validating the Issuer-signed JWT.
      * @throws VerificationException if verification failed
      */
-    private void validateIssuerSignedJwt(SignatureVerifierContext verifier) throws VerificationException {
+    private void validateIssuerSignedJwt(
+            List<SignatureVerifierContext> verifiers
+    ) throws VerificationException {
         // Check that the _sd_alg claim value is understood and the hash algorithm is deemed secure
         issuerSignedJwt.verifySdHashAlgorithm();
 
         // Validate the signature over the Issuer-signed JWT
-        try {
-            issuerSignedJwt.verifySignature(verifier);
-        } catch (VerificationException e) {
-            throw new VerificationException("Invalid Issuer-Signed JWT", e);
+        Iterator<SignatureVerifierContext> iterator = verifiers.iterator();
+        while (iterator.hasNext()) {
+            try {
+                SignatureVerifierContext verifier = iterator.next();
+                issuerSignedJwt.verifySignature(verifier);
+                return;
+            } catch (VerificationException e) {
+                logger.debugf(e, "Issuer-signed JWT's signature verification failed against one potential verifying key");
+                if (iterator.hasNext()) {
+                    logger.debugf("Retrying Issuer-signed JWT's signature verification with next potential verifying key");
+                }
+            }
         }
+
+        // No potential verifier could verify the JWT's signature
+        throw new VerificationException("Invalid Issuer-Signed JWT: Signature could not be verified");
     }
 
     /**
@@ -182,13 +211,13 @@ public class SdJwtVerificationContext {
         validateKeyBindingJwtTyp();
 
         // Determine the public key for the Holder from the SD-JWT
-        var cnf = issuerSignedJwt.getCnfClaim().orElseThrow(
+        JsonNode cnf = issuerSignedJwt.getCnfClaim().orElseThrow(
                 () -> new VerificationException("No cnf claim in Issuer-signed JWT for key binding")
         );
 
         // Ensure that a signing algorithm was used that was deemed secure for the application.
         // The none algorithm MUST NOT be accepted.
-        var holderVerifier = buildHolderVerifier(cnf);
+        SignatureVerifierContext holderVerifier = buildHolderVerifier(cnf);
 
         // Validate the signature over the Key Binding JWT
         try {
@@ -219,7 +248,7 @@ public class SdJwtVerificationContext {
      * @throws VerificationException if verification failed
      */
     private void validateKeyBindingJwtTyp() throws VerificationException {
-        var typ = keyBindingJwt.getHeader().getType();
+        String typ = keyBindingJwt.getHeader().getType();
         if (!typ.equals(KeyBindingJWT.TYP)) {
             throw new VerificationException("Key Binding JWT is not of declared typ " + KeyBindingJWT.TYP);
         }
@@ -234,56 +263,17 @@ public class SdJwtVerificationContext {
         Objects.requireNonNull(cnf);
 
         // Read JWK
-        var cnfJwk = cnf.get("jwk");
+        JsonNode cnfJwk = cnf.get("jwk");
         if (cnfJwk == null) {
             throw new UnsupportedOperationException("Only cnf/jwk claim supported");
         }
 
-        // Parse JWK
-        KeyWrapper keyWrapper;
+        // Convert JWK
         try {
-            JWK jwk = SdJwtUtils.mapper.convertValue(cnfJwk, JWK.class);
-            keyWrapper = JWKSUtils.getKeyWrapper(jwk);
-            Objects.requireNonNull(keyWrapper);
+            return JwkParsingUtils.convertJwkNodeToVerifierContext(cnfJwk);
         } catch (Exception e) {
-            throw new VerificationException("Malformed or unsupported cnf/jwk claim");
+            throw new VerificationException("Could not process cnf/jwk", e);
         }
-
-        // Build verifier
-
-        // KeyType.EC
-        if (keyWrapper.getType().equals(KeyType.EC)) {
-            if (keyWrapper.getAlgorithm() == null) {
-                Objects.requireNonNull(keyWrapper.getCurve());
-
-                String alg = null;
-                switch (keyWrapper.getCurve()) {
-                    case "P-256":
-                        alg = "ES256";
-                        break;
-                    case "P-384":
-                        alg = "ES384";
-                        break;
-                    case "P-521":
-                        alg = "ES512";
-                        break;
-                }
-
-                keyWrapper.setAlgorithm(alg);
-            }
-
-            return new ECDSASignatureVerifierContext(keyWrapper);
-        }
-
-        // KeyType.RSA
-        if (keyWrapper.getType().equals(KeyType.RSA)) {
-            return new AsymmetricSignatureVerifierContext(keyWrapper);
-        }
-
-        // KeyType is not supported
-        // This is unreachable as of now given that `JWKSUtils.getKeyWrapper` will fail
-        // on JWKs with key type not equal to EC or RSA.
-        throw new VerificationException("cnf/jwk alg is unsupported or deemed not secure");
     }
 
     /**
@@ -394,7 +384,7 @@ public class SdJwtVerificationContext {
         Set<String> visitedSalts = new HashSet<>();
         Set<String> visitedDigests = new HashSet<>();
         Set<String> visitedDisclosureStrings = new HashSet<>();
-        var disclosedPayload = validateViaRecursiveDisclosing(
+        JsonNode disclosedPayload = validateViaRecursiveDisclosing(
                 SdJwtUtils.deepClone(issuerSignedJwt.getPayload()),
                 visitedSalts, visitedDigests, visitedDisclosureStrings);
 
@@ -427,11 +417,11 @@ public class SdJwtVerificationContext {
 
         // Find all objects having an _sd key that refers to an array of strings.
         if (currentNode.isObject()) {
-            var currentObjectNode = ((ObjectNode) currentNode);
+            ObjectNode currentObjectNode = ((ObjectNode) currentNode);
 
-            var sdArray = currentObjectNode.get(IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE);
+            JsonNode sdArray = currentObjectNode.get(IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE);
             if (sdArray != null && sdArray.isArray()) {
-                for (var el : sdArray) {
+                for (JsonNode el : sdArray) {
                     if (!el.isTextual()) {
                         throw new VerificationException(
                                 "Unexpected non-string element inside _sd array: " + el
@@ -441,16 +431,16 @@ public class SdJwtVerificationContext {
                     // Compare the value with the digests calculated previously and find the matching Disclosure.
                     // If no such Disclosure can be found, the digest MUST be ignored.
 
-                    var digest = el.asText();
+                    String digest = el.asText();
                     markDigestAsVisited(digest, visitedDigests);
-                    var disclosure = disclosures.get(digest);
+                    String disclosure = disclosures.get(digest);
 
                     if (disclosure != null) {
                         // Mark disclosure as visited
                         visitedDisclosureStrings.add(disclosure);
 
                         // Validate disclosure format
-                        var decodedDisclosure = validateSdArrayDigestDisclosureFormat(disclosure);
+                        DisclosureFields decodedDisclosure = validateSdArrayDigestDisclosureFormat(disclosure);
 
                         // Mark salt as visited
                         markSaltAsVisited(decodedDisclosure.getSaltValue(), visitedSalts);
@@ -475,29 +465,29 @@ public class SdJwtVerificationContext {
 
         // Find all array elements that are objects with one key, that key being ... and referring to a string
         if (currentNode.isArray()) {
-            var currentArrayNode = ((ArrayNode) currentNode);
-            var indexesToRemove = new ArrayList<Integer>();
+            ArrayNode currentArrayNode = ((ArrayNode) currentNode);
+            ArrayList<Integer> indexesToRemove = new ArrayList<>();
 
             for (int i = 0; i < currentArrayNode.size(); ++i) {
-                var itemNode = currentArrayNode.get(i);
+                JsonNode itemNode = currentArrayNode.get(i);
                 if (itemNode.isObject() && itemNode.size() == 1) {
                     // Check single "..." field
-                    var field = itemNode.fields().next();
+                    Map.Entry<String, JsonNode> field = itemNode.fields().next();
                     if (field.getKey().equals(UndisclosedArrayElement.SD_CLAIM_NAME)
                             && field.getValue().isTextual()) {
                         // Compare the value with the digests calculated previously and find the matching Disclosure.
                         // If no such Disclosure can be found, the digest MUST be ignored.
 
-                        var digest = field.getValue().asText();
+                        String digest = field.getValue().asText();
                         markDigestAsVisited(digest, visitedDigests);
-                        var disclosure = disclosures.get(digest);
+                        String disclosure = disclosures.get(digest);
 
                         if (disclosure != null) {
                             // Mark disclosure as visited
                             visitedDisclosureStrings.add(disclosure);
 
                             // Validate disclosure format
-                            var decodedDisclosure = validateArrayElementDigestDisclosureFormat(disclosure);
+                            DisclosureFields decodedDisclosure = validateArrayElementDigestDisclosureFormat(disclosure);
 
                             // Mark salt as visited
                             markSaltAsVisited(decodedDisclosure.getSaltValue(), visitedSalts);
@@ -584,7 +574,7 @@ public class SdJwtVerificationContext {
 
         // If the claim name is _sd or ..., the SD-JWT MUST be rejected.
 
-        var denylist = List.of(
+        List<String> denylist = Arrays.asList(
                 IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE,
                 UndisclosedArrayElement.SD_CLAIM_NAME
         );
