@@ -23,13 +23,16 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.junit.ClassRule;
 import org.junit.Test;
 import org.keycloak.common.VerificationException;
+import org.keycloak.crypto.SignatureVerifierContext;
 import org.keycloak.rule.CryptoInitRule;
 
 import java.time.Instant;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-import static org.hamcrest.CoreMatchers.endsWith;
+import org.keycloak.crypto.SignatureSignerContext;
+
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
@@ -50,55 +53,81 @@ public abstract class SdJwtVerificationTest {
 
     @Test
     public void settingsTest() {
-        var issuerSignerContext = testSettings.issuerSigContext;
+        SignatureSignerContext issuerSignerContext = testSettings.issuerSigContext;
         assertNotNull(issuerSignerContext);
     }
 
     @Test
     public void testSdJwtVerification_FlatSdJwt() throws VerificationException {
-        for (String hashAlg : List.of("sha-256", "sha-384", "sha-512")) {
-            var sdJwt = exampleFlatSdJwtV1()
+        for (String hashAlg : Arrays.asList("sha-256", "sha-384", "sha-512")) {
+            SdJwt sdJwt = exampleFlatSdJwtV1()
                     .withHashAlgorithm(hashAlg)
                     .build();
 
-            sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
+            sdJwt.verify(
+                    defaultIssuerVerifyingKeys(),
+                    defaultIssuerSignedJwtVerificationOpts().build()
+            );
         }
     }
 
     @Test
     public void testSdJwtVerification_EnforceIdempotence() throws VerificationException {
-            var sdJwt = exampleFlatSdJwtV1().build();
-            sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
-            sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
+        SdJwt sdJwt = exampleFlatSdJwtV1().build();
+
+        sdJwt.verify(
+                defaultIssuerVerifyingKeys(),
+                defaultIssuerSignedJwtVerificationOpts().build()
+        );
+
+        sdJwt.verify(
+                defaultIssuerVerifyingKeys(),
+                defaultIssuerSignedJwtVerificationOpts().build()
+        );
     }
 
     @Test
     public void testSdJwtVerification_SdJwtWithUndisclosedNestedFields() throws VerificationException {
-        var sdJwt = exampleSdJwtWithUndisclosedNestedFieldsV1().build();
-        sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
+        SdJwt sdJwt = exampleSdJwtWithUndisclosedNestedFieldsV1().build();
+
+        sdJwt.verify(
+                defaultIssuerVerifyingKeys(),
+                defaultIssuerSignedJwtVerificationOpts().build()
+        );
     }
 
     @Test
     public void testSdJwtVerification_SdJwtWithUndisclosedArrayElements() throws Exception {
-        var sdJwt = exampleSdJwtWithUndisclosedArrayElementsV1().build();
-        sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
+        SdJwt sdJwt = exampleSdJwtWithUndisclosedArrayElementsV1().build();
+
+        sdJwt.verify(
+                defaultIssuerVerifyingKeys(),
+                defaultIssuerSignedJwtVerificationOpts().build()
+        );
     }
 
     @Test
     public void testSdJwtVerification_RecursiveSdJwt() throws Exception {
-        var sdJwt = exampleRecursiveSdJwtV1().build();
-        sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build());
+        SdJwt sdJwt = exampleRecursiveSdJwtV1().build();
+
+        sdJwt.verify(
+                defaultIssuerVerifyingKeys(),
+                defaultIssuerSignedJwtVerificationOpts().build()
+        );
     }
 
     @Test
     public void sdJwtVerificationShouldFail_OnInsecureHashAlg() {
-        var sdJwt = exampleFlatSdJwtV1()
+        SdJwt sdJwt = exampleFlatSdJwtV1()
                 .withHashAlgorithm("sha-224") // not deemed secure
                 .build();
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
-                () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build())
+                () -> sdJwt.verify(
+                        defaultIssuerVerifyingKeys(),
+                        defaultIssuerSignedJwtVerificationOpts().build()
+                )
         );
 
         assertEquals("Unexpected or insecure hash algorithm: sha-224", exception.getMessage());
@@ -106,16 +135,16 @@ public abstract class SdJwtVerificationTest {
 
     @Test
     public void sdJwtVerificationShouldFail_WithWrongVerifier() {
-        var sdJwt = exampleFlatSdJwtV1().build();
-        var exception = assertThrows(
+        SdJwt sdJwt = exampleFlatSdJwtV1().build();
+        VerificationException exception = assertThrows(
                 VerificationException.class,
-                () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                        .withVerifier(testSettings.holderVerifierContext) // wrong verifier
-                        .build())
+                () -> sdJwt.verify(
+                        Collections.singletonList(testSettings.holderVerifierContext), // wrong verifier
+                        defaultIssuerSignedJwtVerificationOpts().build()
+                )
         );
 
-        assertThat(exception.getMessage(), is("Invalid Issuer-Signed JWT"));
-        assertThat(exception.getCause().getMessage(), endsWith("Invalid jws signature"));
+        assertThat(exception.getMessage(), is("Invalid Issuer-Signed JWT: Signature could not be verified"));
     }
 
     @Test
@@ -127,19 +156,22 @@ public abstract class SdJwtVerificationTest {
         claimSet.put("exp", now - 1000); // expired 1000 seconds ago
 
         // Exp claim is plain
-        var sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
+        SdJwt sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
         // Exp claim is undisclosed
-        var sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
-                .withRedListedClaimNames(DisclosureRedList.of(Set.of()))
+        SdJwt sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+                .withRedListedClaimNames(DisclosureRedList.of(Collections.emptySet()))
                 .withUndisclosedClaim("exp", "eluV5Og3gSNII8EYnsxA_A")
                 .build()).build();
 
-        for (SdJwt sdJwt : List.of(sdJwtV1, sdJwtV2)) {
-            var exception = assertThrows(
+        for (SdJwt sdJwt : Arrays.asList(sdJwtV1, sdJwtV2)) {
+            VerificationException exception = assertThrows(
                     VerificationException.class,
-                    () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                            .withValidateExpirationClaim(true)
-                            .build())
+                    () -> sdJwt.verify(
+                            defaultIssuerVerifyingKeys(),
+                            defaultIssuerSignedJwtVerificationOpts()
+                                    .withValidateExpirationClaim(true)
+                                    .build()
+                    )
             );
 
             assertEquals("Issuer-Signed JWT: Invalid `exp` claim", exception.getMessage());
@@ -162,15 +194,18 @@ public abstract class SdJwtVerificationTest {
                 .withUndisclosedClaim("given_name", "eluV5Og3gSNII8EYnsxA_A")
                 .build();
 
-        var sdJwtV1 = exampleFlatSdJwtV2(claimSet1, disclosureSpec).build();
-        var sdJwtV2 = exampleFlatSdJwtV2(claimSet2, disclosureSpec).build();
+        SdJwt sdJwtV1 = exampleFlatSdJwtV2(claimSet1, disclosureSpec).build();
+        SdJwt sdJwtV2 = exampleFlatSdJwtV2(claimSet2, disclosureSpec).build();
 
-        for (SdJwt sdJwt : List.of(sdJwtV1, sdJwtV2)) {
-            var exception = assertThrows(
+        for (SdJwt sdJwt : Arrays.asList(sdJwtV1, sdJwtV2)) {
+            VerificationException exception = assertThrows(
                     VerificationException.class,
-                    () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                            .withValidateExpirationClaim(true)
-                            .build())
+                    () -> sdJwt.verify(
+                            defaultIssuerVerifyingKeys(),
+                            defaultIssuerSignedJwtVerificationOpts()
+                                    .withValidateExpirationClaim(true)
+                                    .build()
+                    )
             );
 
             assertEquals("Issuer-Signed JWT: Invalid `exp` claim", exception.getMessage());
@@ -187,19 +222,22 @@ public abstract class SdJwtVerificationTest {
         claimSet.put("iat", now + 1000); // issued in the future
 
         // Exp claim is plain
-        var sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
+        SdJwt sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
         // Exp claim is undisclosed
-        var sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
-                .withRedListedClaimNames(DisclosureRedList.of(Set.of()))
+        SdJwt sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+                .withRedListedClaimNames(DisclosureRedList.of(Collections.emptySet()))
                 .withUndisclosedClaim("iat", "eluV5Og3gSNII8EYnsxA_A")
                 .build()).build();
 
-        for (SdJwt sdJwt : List.of(sdJwtV1, sdJwtV2)) {
-            var exception = assertThrows(
+        for (SdJwt sdJwt : Arrays.asList(sdJwtV1, sdJwtV2)) {
+            VerificationException exception = assertThrows(
                     VerificationException.class,
-                    () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                            .withValidateIssuedAtClaim(true)
-                            .build())
+                    () -> sdJwt.verify(
+                            defaultIssuerVerifyingKeys(),
+                            defaultIssuerSignedJwtVerificationOpts()
+                                    .withValidateIssuedAtClaim(true)
+                                    .build()
+                    )
             );
 
             assertEquals("Issuer-Signed JWT: Invalid `iat` claim", exception.getMessage());
@@ -216,19 +254,22 @@ public abstract class SdJwtVerificationTest {
         claimSet.put("nbf", now + 1000); // now will be too soon to accept the jwt
 
         // Exp claim is plain
-        var sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
+        SdJwt sdJwtV1 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
         // Exp claim is undisclosed
-        var sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
-                .withRedListedClaimNames(DisclosureRedList.of(Set.of()))
+        SdJwt sdJwtV2 = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+                .withRedListedClaimNames(DisclosureRedList.of(Collections.emptySet()))
                 .withUndisclosedClaim("iat", "eluV5Og3gSNII8EYnsxA_A")
                 .build()).build();
 
-        for (SdJwt sdJwt : List.of(sdJwtV1, sdJwtV2)) {
-            var exception = assertThrows(
+        for (SdJwt sdJwt : Arrays.asList(sdJwtV1, sdJwtV2)) {
+            VerificationException exception = assertThrows(
                     VerificationException.class,
-                    () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                            .withValidateNotBeforeClaim(true)
-                            .build())
+                    () -> sdJwt.verify(
+                            defaultIssuerVerifyingKeys(),
+                            defaultIssuerSignedJwtVerificationOpts()
+                                    .withValidateNotBeforeClaim(true)
+                                    .build()
+                    )
             );
 
             assertEquals("Issuer-Signed JWT: Invalid `nbf` claim", exception.getMessage());
@@ -242,12 +283,14 @@ public abstract class SdJwtVerificationTest {
         claimSet.put("given_name", "John");
         claimSet.set("_sd", mapper.readTree("[123]"));
 
-        var sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
+        SdJwt sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder().build()).build();
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
-                () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts()
-                        .build())
+                () -> sdJwt.verify(
+                        defaultIssuerVerifyingKeys(),
+                        defaultIssuerSignedJwtVerificationOpts().build()
+                )
         );
 
         assertEquals("Unexpected non-string element inside _sd array: 123", exception.getMessage());
@@ -255,17 +298,20 @@ public abstract class SdJwtVerificationTest {
 
     @Test
     public void sdJwtVerificationShouldFail_IfForbiddenClaimNames() {
-        for (String forbiddenClaimName : List.of("_sd", "...")) {
+        for (String forbiddenClaimName : Arrays.asList("_sd", "...")) {
             ObjectNode claimSet = mapper.createObjectNode();
             claimSet.put(forbiddenClaimName, "Value");
 
-            var sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+            SdJwt sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
                     .withUndisclosedClaim(forbiddenClaimName, "eluV5Og3gSNII8EYnsxA_A")
                     .build()).build();
 
-            var exception = assertThrows(
+            VerificationException exception = assertThrows(
                     VerificationException.class,
-                    () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build())
+                    () -> sdJwt.verify(
+                            defaultIssuerVerifyingKeys(),
+                            defaultIssuerSignedJwtVerificationOpts().build()
+                    )
             );
 
             assertEquals("Disclosure claim name must not be '_sd' or '...'", exception.getMessage());
@@ -277,15 +323,18 @@ public abstract class SdJwtVerificationTest {
         ObjectNode claimSet = mapper.createObjectNode();
         claimSet.put("given_name", "John"); // this same field will also be nested
 
-        var sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+        SdJwt sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
                 .withUndisclosedClaim("given_name", "eluV5Og3gSNII8EYnsxA_A")
                 .withDecoyClaim("G02NSrQfjFXQ7Io09syajA")
                 .withDecoyClaim("G02NSrQfjFXQ7Io09syajA")
                 .build()).build();
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
-                () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build())
+                () -> sdJwt.verify(
+                        defaultIssuerVerifyingKeys(),
+                        defaultIssuerSignedJwtVerificationOpts().build()
+                )
         );
 
         assertTrue(exception.getMessage().startsWith("A digest was encountered more than once:"));
@@ -297,24 +346,30 @@ public abstract class SdJwtVerificationTest {
         claimSet.put("given_name", "John");
         claimSet.put("family_name", "Doe");
 
-        var salt = "eluV5Og3gSNII8EYnsxA_A";
-        var sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
+        String salt = "eluV5Og3gSNII8EYnsxA_A";
+        SdJwt sdJwt = exampleFlatSdJwtV2(claimSet, DisclosureSpec.builder()
                 .withUndisclosedClaim("given_name", salt)
                 // We are reusing the same salt value, and that is the problem
                 .withUndisclosedClaim("family_name", salt)
                 .build()).build();
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
-                () -> sdJwt.verify(defaultIssuerSignedJwtVerificationOpts().build())
+                () -> sdJwt.verify(
+                        defaultIssuerVerifyingKeys(),
+                        defaultIssuerSignedJwtVerificationOpts().build()
+                )
         );
 
         assertEquals("A salt value was reused: " + salt, exception.getMessage());
     }
 
+    private List<SignatureVerifierContext> defaultIssuerVerifyingKeys() {
+        return Collections.singletonList(testSettings.issuerVerifierContext);
+    }
+
     private IssuerSignedJwtVerificationOpts.Builder defaultIssuerSignedJwtVerificationOpts() {
         return IssuerSignedJwtVerificationOpts.builder()
-                .withVerifier(testSettings.issuerVerifierContext)
                 .withValidateIssuedAtClaim(false)
                 .withValidateExpirationClaim(false)
                 .withValidateNotBeforeClaim(false);
