@@ -23,6 +23,7 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.junit.ClassRule;
 import org.junit.Test;
 import org.keycloak.common.VerificationException;
+import org.keycloak.crypto.SignatureVerifierContext;
 import org.keycloak.rule.CryptoInitRule;
 import org.keycloak.sdjwt.IssuerSignedJwtVerificationOpts;
 import org.keycloak.sdjwt.SdJwt;
@@ -33,6 +34,8 @@ import org.keycloak.sdjwt.vp.KeyBindingJwtVerificationOpts;
 import org.keycloak.sdjwt.vp.SdJwtVP;
 
 import java.time.Instant;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.containsString;
@@ -62,6 +65,7 @@ public abstract class SdJwtVPVerificationTest {
         SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
         sdJwtVP.verify(
+                defaultIssuerVerifyingKeys(),
                 defaultIssuerSignedJwtVerificationOpts().build(),
                 defaultKeyBindingJwtVerificationOpts().build()
         );
@@ -69,13 +73,17 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testVerif_s20_8_sdjwt_with_kb__AltCnfCurves() throws VerificationException {
-        var entries = List.of("sdjwt/s20.8-sdjwt+kb--es384.txt", "sdjwt/s20.8-sdjwt+kb--es512.txt");
+        List<String> entries = Arrays.asList(
+                "sdjwt/s20.8-sdjwt+kb--es384.txt",
+                "sdjwt/s20.8-sdjwt+kb--es512.txt"
+        );
 
-        for (var entry : entries) {
+        for (String entry : entries) {
             String sdJwtVPString = TestUtils.readFileAsString(getClass(), entry);
             SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
             sdJwtVP.verify(
+                    defaultIssuerVerifyingKeys(),
                     defaultIssuerSignedJwtVerificationOpts().build(),
                     defaultKeyBindingJwtVerificationOpts().build()
             );
@@ -84,18 +92,19 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testVerif_s20_8_sdjwt_with_kb__CnfRSA() throws VerificationException {
-        var entries = List.of(
+        List<String> entries = Arrays.asList(
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-rs256.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps256.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps384.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps512.txt"
         );
 
-        for (var entry : entries) {
+        for (String entry : entries) {
             String sdJwtVPString = TestUtils.readFileAsString(getClass(), entry);
             SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
             sdJwtVP.verify(
+                    defaultIssuerVerifyingKeys(),
                     defaultIssuerSignedJwtVerificationOpts().build(),
                     defaultKeyBindingJwtVerificationOpts().build()
             );
@@ -108,6 +117,7 @@ public abstract class SdJwtVPVerificationTest {
         SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
         sdJwtVP.verify(
+                defaultIssuerVerifyingKeys(),
                 defaultIssuerSignedJwtVerificationOpts().build(),
                 defaultKeyBindingJwtVerificationOpts()
                         .withKeyBindingRequired(false)
@@ -220,7 +230,7 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testShouldFail_IfKbSdHashWrongFormat() {
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
 
         // This hash is not a string
         kbPayload.set("sd_hash", mapper.valueToTree(1234));
@@ -235,7 +245,7 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testShouldFail_IfKbSdHashInvalid() {
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
 
         // This hash makes no sense
         kbPayload.put("sd_hash", "c3FmZHFmZGZlZXNkZmZi");
@@ -252,7 +262,7 @@ public abstract class SdJwtVPVerificationTest {
     public void testShouldFail_IfKbIssuedInFuture() {
         long now = Instant.now().getEpochSecond();
 
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
         kbPayload.set("iat", mapper.valueToTree(now + 1000));
 
         testShouldFailGeneric2(
@@ -267,7 +277,7 @@ public abstract class SdJwtVPVerificationTest {
     public void testShouldFail_IfKbTooOld() {
         long issuerSignedJwtIat = 1683000000; // same value in test vector
 
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
         // This KB-JWT is then issued more than 60s ago
         kbPayload.set("iat", mapper.valueToTree(issuerSignedJwtIat - 120));
 
@@ -285,7 +295,7 @@ public abstract class SdJwtVPVerificationTest {
     public void testShouldFail_IfKbExpired() {
         long now = Instant.now().getEpochSecond();
 
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
         kbPayload.set("exp", mapper.valueToTree(now - 1000));
 
         testShouldFailGeneric2(
@@ -302,7 +312,7 @@ public abstract class SdJwtVPVerificationTest {
     public void testShouldFail_IfKbNotBeforeTimeYet() {
         long now = Instant.now().getEpochSecond();
 
-        var kbPayload = exampleKbPayload();
+        ObjectNode kbPayload = exampleKbPayload();
         kbPayload.set("nbf", mapper.valueToTree(now + 1000));
 
         testShouldFailGeneric2(
@@ -321,9 +331,10 @@ public abstract class SdJwtVPVerificationTest {
         String sdJwtVPString = TestUtils.readFileAsString(getClass(), "sdjwt/s20.8-sdjwt+kb--cnf-is-not-jwk.txt");
         SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
-        var exception = assertThrows(
+        UnsupportedOperationException exception = assertThrows(
                 UnsupportedOperationException.class,
                 () -> sdJwtVP.verify(
+                        defaultIssuerVerifyingKeys(),
                         defaultIssuerSignedJwtVerificationOpts().build(),
                         defaultKeyBindingJwtVerificationOpts().build()
                 )
@@ -338,8 +349,8 @@ public abstract class SdJwtVPVerificationTest {
                 // The cnf/jwk object has an unrecognized key type
                 "sdjwt/s20.8-sdjwt+kb--cnf-jwk-is-malformed.txt",
                 defaultKeyBindingJwtVerificationOpts().build(),
-                "Malformed or unsupported cnf/jwk claim",
-                null
+                "Could not process cnf/jwk",
+                "Unsupported or invalid JWK"
         );
     }
 
@@ -349,8 +360,8 @@ public abstract class SdJwtVPVerificationTest {
                 // HMAC cnf/jwk parsing is not supported
                 "sdjwt/s20.8-sdjwt+kb--cnf-hmac.txt",
                 defaultKeyBindingJwtVerificationOpts().build(),
-                "Malformed or unsupported cnf/jwk claim",
-                null
+                "Could not process cnf/jwk",
+                "Unsupported or invalid JWK"
         );
     }
 
@@ -363,9 +374,10 @@ public abstract class SdJwtVPVerificationTest {
         String sdJwtVPString = TestUtils.readFileAsString(getClass(), testFilePath);
         SdJwtVP sdJwtVP = SdJwtVP.of(sdJwtVPString);
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
                 () -> sdJwtVP.verify(
+                        defaultIssuerVerifyingKeys(),
                         defaultIssuerSignedJwtVerificationOpts().build(),
                         keyBindingJwtVerificationOpts
                 )
@@ -399,9 +411,10 @@ public abstract class SdJwtVPVerificationTest {
                         + keyBindingJWT.toJws()
         );
 
-        var exception = assertThrows(
+        VerificationException exception = assertThrows(
                 VerificationException.class,
                 () -> sdJwtVP.verify(
+                        defaultIssuerVerifyingKeys(),
                         defaultIssuerSignedJwtVerificationOpts().build(),
                         keyBindingJwtVerificationOpts
                 )
@@ -413,9 +426,12 @@ public abstract class SdJwtVPVerificationTest {
         }
     }
 
+    private List<SignatureVerifierContext> defaultIssuerVerifyingKeys() {
+        return Collections.singletonList(testSettings.issuerVerifierContext);
+    }
+
     private IssuerSignedJwtVerificationOpts.Builder defaultIssuerSignedJwtVerificationOpts() {
         return IssuerSignedJwtVerificationOpts.builder()
-                .withVerifier(testSettings.issuerVerifierContext)
                 .withValidateIssuedAtClaim(false)
                 .withValidateNotBeforeClaim(false);
     }
@@ -431,7 +447,7 @@ public abstract class SdJwtVPVerificationTest {
     }
 
     private ObjectNode exampleKbPayload() {
-        var payload = mapper.createObjectNode();
+        ObjectNode payload = mapper.createObjectNode();
         payload.put("nonce", "1234567890");
         payload.put("aud", "https://verifier.example.org");
         payload.put("sd_hash", "X9RrrfWt_70gHzOcovGSIt4Fms9Tf2g2hjlWVI_cxZg");
